--- a/approval/templates/base.html
+++ b/approval/templates/base.html
@@ -38,9 +38,9 @@
               <li class="nav-item">
                   <a class="nav-link active" href="{% url "add_project" %}">Add Project</a>
               </li>
-    
+              
               <li class="nav-item">
-                  <a class="nav-link" href="#">Technical review</a>
+                  <a class="nav-link active" href="{% url "technical_review" %}" >Technical review</a>
               </li>
 
               <li class="nav-item">
