--- a/approval/templates/project_detail.html
+++ b/approval/templates/project_detail.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %}
 {% load static %}
-
+{% load crispy_forms_tags %}
 {% block content %}
     {% if user.is_authenticated %}
         {% if project %}
         <div class="row">
-            <div class="col-md-1"></div>
+            <div class="col-md-1"></div> 
             <div class="col md-10">
-                    <div class="card card-info">
+                    <div class="card">
                         <div class="card-header"><h5 class="float">Project Title : <b class="text-info">{{ project.project_title }}</b></h5></div>
-                        
                         <div class="card-body text-left">
                             <div class="row">
                                 <div class="col-md-7">
@@ -47,13 +46,59 @@
                                     </table>
                                 </div>
                             </div>
+
+                            <div class="row mt-4">
+                                <div class="col-md-10">
+                                    <div class="comment-wrapper">
+                                        <div class="card" id="dark-bg">
+                                            {% if project.status == "tech" %}
+                                            <h4 class="mt-2 text-left mb-2 p-3"><strong>
+                                                Technical Team review for {{ project.project_title }}
+                                            </strong></h5>
+                                            {% endif %}
+                                            <div class="card-body">
+                                                <form action="{% url "comments" project.id %}" method="post" enctype="multipart/form-data">
+                                                    {% csrf_token %}
+                                                    {{ form|crispy }}
+                                                    <button class="btn btn-block btn-outline-primary pl-5 pr-5 float-right" type="submit">Post Comment</button>
+                                                </form>
+                                                <div class="clearfix"></div>
+                                                <hr>
+                                                <ul class="media-list">
+                                                    <h5 class="text-secondary mt-1 mb-3">Latest Comments</h5>
+                                                    {% for comment in comments %}
+                                                    {% if comment.status == "tech" %}
+                                                    <li class="media">
+                                                                <div class="media-body"> <span class="text-muted pull-right"> <small class="text-muted">{{ comment.add_date }}</small> </span> <strong class="text-success">@{{ comment.sender }}</strong>
+                                                                <p>{{ comment.comment_text }}</p>
+                                                            </div>
+                                                        </li>                                    
+                                                    {% endif %}
+                    
+                                                    {% endfor %}
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>                                    
+                                </div>
+
+                                <div class="col-md-1"></div>
+
+                            </div>
+                            
                         </div>
                     </div>
             </div>
             <div class="col-md-1"></div>
 
+        </div> 
+
+        <div class="row mb-5">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+            </div>
         </div>
- 
+
         {% endif %}
     {% endif %}
 {% endblock %}
