--- a/approval/templates/prc_meeting.html
+++ b/approval/templates/prc_meeting.html
@@ -76,13 +76,14 @@
 
     </div>
 
+
     <div class="row mt-2">
         <div class="col-md-3"></div>
         <div class="col-md-6 op">
 
             {% if message %}
             <div class="alert alert-info">
-                {{ message }} <a href="{% url "prc_review" %}">Here</a>
+                {{ message }} <a href="{% url "nfr" %}">Here</a>
             </div>
             {% endif %}
 
@@ -92,14 +93,14 @@
 
         <div class="card mt-3 mb-3">
             <div class="card-header">
-                    <h5 class="mt-2 text-center mb-2 text-info">Projects currenty at Technical Review phase</h5>
+                <h5 class="mt-2 text-center mb-2 text-info">Projects currenty at PRC Meeting phase</h5>
             </div>
 
             <div class="card-body">
                     <table class="table table-striped table-sm">
                         <thead>
                             <tr>
-                                <th>Project Title</th>
+                                <th>Project</th>
                                 <th>Project Category</th>
                                 <th>Unit</th>
                                 <th>Start Date</th>
@@ -115,17 +116,17 @@
                                 <td>{{ project.unit }}</td>
                                 <td>{{ project.start_date }}</td>
                                 <td>
-                                  <a href="{% url "project_details" project.id %}">
-                                      <button class="btn btn-outline-primary btn-sm">Details</button>
-                                  </a>
-                                  
-                                  <a class="confirm-approval" href="{% url "change_status" project.id "prc_review" %}">
-                                      <button class="btn btn-outline-info btn-sm">Approve</button>
-                                  </a>
+                                    <a href="{% url "project_details" project.id %}">
+                                        <button class="btn btn-outline-primary btn-sm">Details</button>
+                                    </a>
 
-                                  <a class="confirm-approval" href="{% url "change_status" project.id "closed" %}">
-                                      <button class="btn btn-outline-danger btn-sm">Reject</button>
-                                  </a>
+                                    <a class="confirm-approval" href="{% url "change_status" project.id "nfr" %}">
+                                        <button class="btn btn-outline-info btn-sm">Approve</button>
+                                    </a>
+
+                                    <a class="confirm-approval" href="{% url "change_status" project.id "closed" %}">
+                                        <button class="btn btn-outline-danger btn-sm">Reject</button>
+                                    </a>
                                 </td>
                             </tr>
                     {% endfor %}
@@ -171,7 +172,6 @@
     })
 
     $(".op").effect( "bounce", { times: 2 }, "fast" );
-
 
     }); 
   </script>
