--- a/approval/templates/prc_review.html
+++ b/approval/templates/prc_review.html
@@ -82,7 +82,7 @@
 
             {% if message %}
             <div class="alert alert-info">
-                {{ message }} <a href="{% url "prc_review" %}">Here</a>
+                {{ message }} <a href="{% url "prc_meeting" %}">Here</a>
             </div>
             {% endif %}
 
@@ -90,9 +90,9 @@
         <div class="col-md-3"></div>
     </div>
 
-        <div class="card mt-3 mb-3">
+        <div class="card mt-1 mb-3">
             <div class="card-header">
-                    <h5 class="mt-2 text-center mb-2 text-info">Projects currenty at Technical Review phase</h5>
+                <h5 class="mt-2 text-center mb-2 text-info">Projects currenty at PRC Review phase</h5>
             </div>
 
             <div class="card-body">
@@ -115,17 +115,18 @@
                                 <td>{{ project.unit }}</td>
                                 <td>{{ project.start_date }}</td>
                                 <td>
-                                  <a href="{% url "project_details" project.id %}">
-                                      <button class="btn btn-outline-primary btn-sm">Details</button>
-                                  </a>
-                                  
-                                  <a class="confirm-approval" href="{% url "change_status" project.id "prc_review" %}">
-                                      <button class="btn btn-outline-info btn-sm">Approve</button>
-                                  </a>
+                                    <a href="{% url "project_details" project.id %}">
+                                        <button class="btn btn-outline-primary btn-sm">Details</button>
+                                    </a>
 
-                                  <a class="confirm-approval" href="{% url "change_status" project.id "closed" %}">
-                                      <button class="btn btn-outline-danger btn-sm">Reject</button>
-                                  </a>
+                                    <a class="confirm-approval" href="{% url "change_status" project.id "prc_meeting" %}">
+                                        <button class="btn btn-outline-info btn-sm">Approve</button>
+                                    </a>
+
+                                    <a class="confirm-approval" href="{% url "change_status" project.id "closed" %}">
+                                        <button class="btn btn-outline-danger btn-sm">Reject</button>
+                                    </a>
+
                                 </td>
                             </tr>
                     {% endfor %}
@@ -171,7 +172,6 @@
     })
 
     $(".op").effect( "bounce", { times: 2 }, "fast" );
-
 
     }); 
   </script>
