--- a/approval/static/approval/styles/main.css
+++ b/approval/static/approval/styles/main.css
@@ -32,3 +32,11 @@ body{
     background-color: whitesmoke !important;
     border-radius: 5px;
 }
+
+a{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: none !important;
+}
